consistent card sizes with scrollability, fixed title overflow bug, changed all pixel to rem

--- a/src/app/components/f5-config/f5-config-card/f5-config-card.component.css
+++ b/src/app/components/f5-config/f5-config-card/f5-config-card.component.css
@@ -1,25 +1,25 @@
 .card {
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem; /* 20px / 16px */
   cursor: pointer;
 }
 
 .card:hover {
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2); /* Adds a shadow around the card */
-  transition: box-shadow 0.3s ease-in-out; /* Smooth transition */
+  box-shadow: 0 0.25rem 0.5rem rgba(0,0,0,0.2); /* 4px / 16px, 8px / 16px */
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 .card:focus {
-  outline: none; /* Removes the default focus outline */
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2); /* Example: Adds a shadow to indicate focus */
+  outline: none;
+  box-shadow: 0 0.25rem 0.5rem rgba(0,0,0,0.2);
 }
 
 .card:not(.card-disabled):active {
-  transform: scale(0.98); /* Slightly reduces the size to simulate a button press */
+  transform: scale(0.98);
 }
 
 .btn-icon:not(:disabled):hover {
-  transform: rotate(70deg); /* Adjust the rotation degree as needed */
-  transition: transform 0.3s ease; /* Smooth transition for the rotation effect */
+  transform: rotate(70deg);
+  transition: transform 0.3s ease;
 }
 
 .card-disabled {
@@ -28,22 +28,22 @@
 }
 
 .card-disabled:hover {
-  box-shadow: none; /* Removes hover effect */
+  box-shadow: none;
 }
 
 .card-disabled .btn-icon {
-  pointer-events: none; /* Prevents clicks on the refresh button */
+  pointer-events: none;
 }
 
 .custom-align-items {
   display: flex;
-  align-items: center; /* This should already align items vertically in the center */
+  align-items: center;
 }
 
 .icon-align {
-  margin-right: 4px; /* Adjust based on your spacing preference */
+  margin-right: 0.25rem; /* 4px / 16px */
 }
 
 .custom-align-items p {
-  margin-bottom: 0; /* Ensure the paragraph doesn't push itself down with margin */
+  margin-bottom: 0;
 }
