--- a/src/app/components/f5-config/f5-config-filter/f5-config-filter.component.css
+++ b/src/app/components/f5-config/f5-config-filter/f5-config-filter.component.css
@@ -4,10 +4,10 @@
 }
 
 .dropdown-toggle {
-  height: 24px;
-  padding: 2px 10px; /* Reduce padding on the top and bottom, adjust left/right as needed */
+  height: 1.5rem; /* 24px / 16px */
+  padding: 0.125rem 0.625rem; /* 2px / 16px and 10px / 16px */
   border: none;
-  border-bottom: 2px solid #ccc;
+  border-bottom: 0.125rem solid #ccc; /* 2px / 16px */
   cursor: pointer;
   user-select: none;
   background-color: #fff;
@@ -17,11 +17,11 @@
 }
 
 .border-enabled {
-  border-bottom: 2px solid #000;
+  border-bottom: 0.125rem solid #000; /* 2px / 16px */
 }
 
 .border-disabled {
-  border-bottom: 2px solid #ccc;
+  border-bottom: 0.125rem solid #ccc; /* 2px / 16px */
 }
 
 .dropdown-menu {
@@ -31,14 +31,14 @@
   right: 0;
   z-index: 1000;
   padding: 0;
-  margin: 2px 0 0;
+  margin: 0.125rem 0 0; /* 2px / 16px */
   background-color: #f8f9fa;
   border: none;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.125rem 0.3125rem rgba(0, 0, 0, 0.15); /* 2px / 16px and 5px / 16px */
 }
 
 .dropdown-item {
-  padding: 10px;
+  padding: 0.625rem; /* 10px / 16px */
   cursor: pointer;
   user-select: none;
 }
@@ -49,9 +49,9 @@
 
 .arrow.down {
   border: solid black;
-  border-width: 0 3px 3px 0;
+  border-width: 0 0.1875rem 0.1875rem 0; /* 0, 3px / 16px, 3px / 16px, 0 */
   display: inline-block;
-  padding: 3px;
+  padding: 0.1875rem; /* 3px / 16px */
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
 }
@@ -67,10 +67,10 @@
 }
 
 .search-input {
-  height: 24px;
-  padding: 2px 10px;
+  height: 1.5rem; /* 24px / 16px */
+  padding: 0.125rem 0.625rem; /* 2px / 16px and 10px / 16px */
   border: none;
-  border-bottom: 2px solid #000;
+  border-bottom: 0.125rem solid #000; /* 2px / 16px */
 }
 
 .search-input:focus {
